[package]
name = "wabisabi"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2021"
description = "Elegant colors for truecolor terminals"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/wabisabi"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-random = "0.1.13"
rand = "0.8.5"
